--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-/* Transição de cor para a palavra CODE */
+/* Estilos para a transição da palavra CODE */
 .CODE-transition {
     transition: color 3.5s ease-in-out;
 }
@@ -8,12 +8,16 @@
     color: rgb(231, 33, 33);
 }
 
+/* Melhorar o contraste para leitura */
+.text-light-gray {
+    color: #e2e2e2e2;
+}
 
 /* Estilos para o botão hamburger */
 .btn-hamburger {
     position: fixed;
-    top: calc(1.5rem);
-    right: calc(1.5rem);
+    top: 1.5rem;
+    right: 1.5rem;
     z-index: 105;
     width: 4rem;
     height: 4rem;
@@ -26,142 +30,116 @@
     cursor: pointer;
     transition: transform 0.3s ease-in-out, background-color 0.3s ease-in-out;
     perspective: 1000px;
-    /* Adiciona perspectiva para o efeito 3D */
 }
 
-.btn-bars {
-    width: 25%;
-    height: 25%;
-    position: relative;
-    transform-style: preserve-3d;
-    /* Adiciona efeito 3D */
-}
-
-.bar {
-    position: fixed;
-    left: 50%;
-    top: 50%;
-    width: 100%;
-    height: 2px;
-    background-color: white;
-    transform-origin: center center;
-    /* Define o ponto de origem da transformação */
-    transition: transform 2s ease;
-}
-
-.btn-bars span {
-    text-align: center;
-    /* Centraliza o texto horizontalmente */
-    overflow: hidden;
-    /* Evita que o texto ultrapasse as bordas */
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: xx-large;
-    font-weight: bolder;
-}
-
-.btn-hamburger.active {
-    transform: scale(1.5);
+.btn-hamburger.active, .btn-hamburger:hover {
+    transform: scale(1.1);
     /* Efeito de escala ao passar o mouse */
-}
-
-.btn-hamburger:hover {
-    background-color: gray;
+    background-color: black;
     /* Mudança de cor de fundo ao passar o mouse */
 }
 
-
-.buttons {
-    display: flex;
-    justify-content: space-between;
-}
-
-
-
-.triangle {
-    position: relative;
+/* Configurações gerais dos botões magnéticos */
+.btn-magnetic {
+    width: 10rem;
+    height: 10rem;
+    color: white;
+    background-color: black;
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
+    transition: transform 1s, background-color 1s;
+    perspective: 1000px;
+
+}
+
+.btn-magnetic:hover {
+
+    transform: scale(3.1);
+
+}
+
+/* Estilo específico para o círculo */
+.circle {
+    border-radius: 50%;
+}
+
+/* Estilo específico para o triângulo */
+.triangle {
     width: 0;
     height: 0;
     border-left: 10rem solid transparent;
     border-right: 0 solid transparent;
     border-bottom: 10rem solid black;
+    background-color: transparent;
+    /* Tamanho e cor do triângulo */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.triangle .btn-bars {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.triangle span {
-    position: absolute;
-    bottom: -1.5rem;
-    color: white;
-}
-
-.square {
-    background-color: black;
-}
-
-.circle {
-    background-color: black;
-    border-radius: 50%;
-}
-
-.circle:hover {
-
-    background-color: darkgray;
-}
-
-.square:hover {
-
+/* Alterações de cor ao passar o mouse */
+.circle:hover, .square:hover {
     background-color: darkgray;
 }
 
 .triangle:hover {
-
-    border-bottom: 10rem solid darkgrey;
+    border-bottom: 10rem solid darkgray;
 }
 
-.size {
-
+/* Estilo do contêiner que agrupa as formas */
+.container {
     width: 31.5rem;
     height: 31.5rem;
-
-}
-
-.container {
     border: 2px solid darkgrey;
-    /* Define a sombra inicial */
     box-shadow: 0px 0px 0px 400px rgba(193, 193, 193, 0.633);
-    /* Adiciona transição para a sombra */
     transition: box-shadow 0.8s ease-in-out;
-
 }
 
 .container:hover {
-    /* Altera a sombra ao passar o mouse sobre o container */
     box-shadow: 0px 0px 0px 5px black;
     border: 2px solid black;
 }
 
-.btn-magnetic {
-
-    width: 10rem;
-    height: 10rem;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+/* Estilos para formas flutuantes e botão hambúrguer */
+.btn-magnetic, .btn-hamburger {
+    transform: 1.5s cubic-bezier(0, 0, 0, 1.21);
     cursor: pointer;
-    transition: transform 0.5s ease-in-out, background-color 0.5s ease-in-out;
-    perspective: 1000px;
-    /* Adiciona perspectiva para o efeito 3D */
+}
 
+.btn-hamburger.active, .btn-hamburger:hover {
+    transform: scale(1.1);
+    background-color: gray;
+}
+
+.nav-menu {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 250px;
+    height: 100%;
+    background-color: black;
+    color: white;
+    transition: right 0.5s ease;
+}
+
+.nav-menu.active {
+    right: 0;
+}
+
+/* Efeito parallax nas seções */
+.section {
+    height: 100vh;
+    background-attachment: fixed;
+}
+
+/* Customizações adicionais para formas */
+.circle {
+    border-radius: 50%;
+}
+
+.mt-10 {
+
+    margin-top: 18.5rem;
 }
